# aapt2

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists_host.txt  build_host.sh  build_local.sh  patch.sh  patch_local.sh
.github/workflows/: build_host.yml  release.yml
cmake/: aapt2.cmake
cmake_host/: CMakeLists.txt  host_availability.h  logger_write_host.cpp  posix_strerror_r_host.cpp  trace_host_stub.cpp
patches/: map_ptr_iterator.patch  search_all_include_packages.patch  ziparchive_bitfield.patch
